--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,6 +3,7 @@ services:
     image: mysql
     environment:
       - MYSQL_ROOT_PASSWORD=password
+      - MYQSL_DATABASE=goal
     ports:
       - 3306:3306
     volumes:
