--- a/backend/package.json
+++ b/backend/package.json
@@ -18,7 +18,8 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
-    "migration:down": "bun db/rollback.ts"
+    "migration:up": "bun db/up.ts",
+    "migration:down": "bun db/down.ts"
   },
   "dependencies": {
     "@nestjs/common": "^11.0.1",
