--- a/backend/package.json
+++ b/backend/package.json
@@ -6,9 +6,9 @@
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
-    "build": "bun build ./src/main.ts --outdir ./dist",
+    "build": "tsc ./src/main.ts --outdir ./dist",
     "start": "bun ./dist/main.js",
-    "start:dev": "tsx watch src/main.ts",
+    "start:dev": "tsc && tsx watch src/main.ts | pino-pretty",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
@@ -25,7 +25,8 @@
     "dotenv": "^17.2.3",
     "fastify": "^5.6.1",
     "kysely": "^0.28.8",
-    "pg": "^8.16.3"
+    "pg": "^8.16.3",
+    "pino": "^10.1.0"
   },
   "devDependencies": {
     "@types/jest": "^29.5.14",
@@ -34,6 +35,7 @@
     "@types/supertest": "^6.0.2",
     "jest": "^29.7.0",
     "nodemon": "^3.1.10",
+    "pino-pretty": "^13.1.2",
     "supertest": "^7.0.0",
     "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
