--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -1,6 +1,12 @@
 {
   "compilerOptions": {
     "strictPropertyInitialization": false,
+    "baseUrl": "./",
+  //  "paths": {
+  //    "@/*": [
+  //      "src/*"
+  //    ],
+  //  },
     /* Visit https://aka.ms/tsconfig to read more about this file */
 
     /* Projects */
