--- a/backend/package.json
+++ b/backend/package.json
@@ -22,14 +22,17 @@
     "migration:down": "bun db/down.ts"
   },
   "dependencies": {
+    "@fastify/cors": "^11.1.0",
     "dotenv": "^17.2.3",
     "fastify": "^5.6.1",
+    "jsonwebtoken": "^9.0.2",
     "kysely": "^0.28.8",
     "pg": "^8.16.3",
     "pino": "^10.1.0"
   },
   "devDependencies": {
     "@types/jest": "^29.5.14",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^24.9.1",
     "@types/pg": "^8.15.5",
     "@types/supertest": "^6.0.2",
